# kurobe

./: .gitignore  CLAUDE.md  Makefile  README.md  config.sample.env  docker-compose.yaml  package-lock.json  start.py
.cursor/rules/: backend.mdc  kurobe-project.mdc
backend/: flyway.conf  pyproject.toml  test_imports.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  connections.py  dashboards.py  engines.py  questions.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  logging.py
backend/app/engines/: __init__.py  registry.py
backend/app/middleware/: __init__.py  auth.py  logging.py  metrics.py
backend/app/schemas/: __init__.py  models.py  requests.py  responses.py
backend/app/services/: __init__.py  questions.py
backend/db/migration/: V1__Initial_schema.sql
backend/postgres/migrations/: 001_initial_schema.sql
config/: engines.yaml
frontend/: .prettierrc  DEVELOPMENT.md  README.md  components.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/dashboards/: page.tsx
frontend/src/app/(dashboard)/questions/: page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/app/data/: page.tsx
frontend/src/app/app/questions/: page.tsx
frontend/src/app/auth/: actions.ts
frontend/src/app/auth/callback/: route.ts
frontend/src/components/chat/: chat-interface-fixed.tsx  chat-interface.tsx  chat-sidebar.tsx  index.ts  recent-activity.tsx  thread-sidebar.tsx
frontend/src/components/dashboard/: dashboard-content.tsx  dashboard-skeleton.tsx  layout-content.tsx  sidebar.tsx
frontend/src/components/dashboards/: dashboards-grid.tsx  new-dashboard-dialog.tsx
frontend/src/components/home/: first-bento-animation.tsx  fourth-bento-animation.tsx  third-bento-animation.tsx
frontend/src/components/home/sections/: hero-section.tsx  navbar.tsx
frontend/src/components/home/ui/: hero-video-dialog.tsx
frontend/src/components/panels/: index.ts  panel-renderer.tsx
frontend/src/components/questions/: index.ts  new-question-dialog.tsx  question-interface.tsx  questions-list.tsx  recent-questions.tsx
frontend/src/components/sidebar/: sidebar-left.tsx
frontend/src/components/ui/: dialog.tsx  sidebar.tsx
frontend/src/lib/: config.ts  id-generator.ts  utils.ts
frontend/src/providers/: query-provider.tsx  react-query-provider.tsx
frontend/src/types/: index.ts
memory-bank/: activeContext.md  agents-core-engine-design.md  currentStatus.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sdk/: README.md  pyproject.toml
sdk/examples/: basic_usage.py
sdk/kurobe/: __init__.py  kurobe.py  question.py
sdk/kurobe/api/: __init__.py  base.py  questions.py
sdk/kurobe/bi/: __init__.py  connectors.py
sdk/kurobe/core/: __init__.py  client.py  interfaces.py  models.py  schemas.py
